--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .vscode/
-Build/
+build/
+
+# CMAKE
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
